--- a/client/src/components/Timescale/Timescale.scss
+++ b/client/src/components/Timescale/Timescale.scss
@@ -7,17 +7,14 @@
     flex-direction: row;
 
     color: azure;
-    padding: 0 2rem; // match padding of CompactHabit
+    padding-left: 2rem; // match padding of CompactHabit
 
     &__list {
         width: 100%;
         list-style: none;
         padding: 0;
         margin: 0;
-        // margin-left: shared.$habitNameWidth;
-
         display: flex;
-        // justify-content: space-evenly;
 
         &--entry {
             &:nth-of-type(1) {
@@ -29,9 +26,7 @@
             overflow: hidden;
             text-align: center;
             font-size: 1rem;
-            line-height: 120%;
             color: color.$light;
-            height: 120%;
             align-self: center;
             padding: 0.5rem 0;
             justify-content: center;
