--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,3 +1,5 @@
+@use "./style/shared/color";
+
 *,
 html {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
@@ -10,7 +12,7 @@ html {
 }
 
 body {
-    background-color: #202020;
+    background-color: color.$background;
     color: azure;
     overflow-y: scroll;
     overflow-x: hidden;
