(style) Create page title style

--- a/client/src/components/Habits/Habits.module.scss
+++ b/client/src/components/Habits/Habits.module.scss
@@ -1,6 +1,10 @@
 @use "../../style/shared/color";
 @use "../../style/shared/shared";
 
+.Title {
+    @extend %page-title;
+}
+
 .Habits {
     display: flex;
     flex-direction: column;
@@ -12,14 +16,14 @@
 
 .Header {
     display: grid;
-    position: fixed;
+    position: sticky;
     z-index: 2000;
     top: 5rem;
     grid-template-columns: shared.$habitNameWidth 1fr;
     align-items: center;
     background-color: color.$background;
     padding: 1rem 0;
-    outline: 2px solid color.$secondary;
+    outline: 3px solid color.$secondary;
     padding-right: 4.7rem;
-    border-radius: 3px;
+    box-shadow: 0 0.5rem 0.7rem -0.3rem black;
 }
