--- a/client/src/components/Habits/Habits.module.scss
+++ b/client/src/components/Habits/Habits.module.scss
@@ -11,6 +11,10 @@
     width: max-content;
 
     padding: 0 2rem;
+
+    @media screen and (min-width: 1080px) {
+        margin: 0 auto;
+    }
 }
 
 .Header {
