--- a/client/src/components/Auth/Auth.module.scss
+++ b/client/src/components/Auth/Auth.module.scss
@@ -1,4 +1,5 @@
 @use "../../style/shared/shared";
+@use "../../style/shared/color";
 
 $gap: 0.5rem;
 $pad-x: 4rem;
@@ -14,6 +15,7 @@ $pad-x: 4rem;
         font-size: 1rem;
         font-weight: 500;
         margin-bottom: 0.2rem;
+        padding-left: 0.2rem;
     }
 
     input {
@@ -23,7 +25,7 @@ $pad-x: 4rem;
             @extend %outline-active;
 
             background-color: #222;
-            border: 3px solid #555;
+            border: 3px solid color.$tertiary;
             color: azure;
             font-size: 0.95rem;
             line-height: 2rem;
@@ -34,19 +36,25 @@ $pad-x: 4rem;
 }
 
 .Button {
+    $shadow: 0 0.2rem 0.4rem 0 color.$main;
     margin-top: calc(2 * $gap);
     display: flex;
     justify-content: center;
     line-height: 2rem;
     font-size: 0.9em;
-    padding: 0.6rem 3rem;
-    background-color: #111;
-    border: 3px solid #555;
+    padding: 0.3rem 1.2rem;
+    background-color: color.$dark-tint;
+    border: 3px solid color.$secondary;
     color: azure;
-    box-shadow: 0 0.2rem 0.5rem 0 black;
-    width: calc(11rem / 2);
-
+    box-shadow: $shadow;
     @extend %outline-active;
+
+    transition: all 75ms ease-in;
+
+    &:hover {
+        transform: translateY(-3px);
+        box-shadow: 0 0.3em 0 -0.2em color.$tertiary, $shadow;
+    }
 }
 
 .Field {
@@ -57,9 +65,14 @@ $pad-x: 4rem;
 }
 
 .Header {
+    $pad: 2.5rem;
     font-weight: 700;
     font-size: 1.4rem;
     margin-bottom: $gap;
+    border-bottom: 3px solid color.$tertiary;
+    width: max-content;
+    padding-left: $pad;
+    margin-left: -$pad;
 }
 
 .Message {
