--- a/client/src/components/Layout/header.module.scss
+++ b/client/src/components/Layout/header.module.scss
@@ -43,15 +43,17 @@
 
     &__logo {
         height: 100%;
-        width: 2rem;
+        width: max-content;
         display: flex;
+        gap: 0.8rem;
+        font-weight: 600;
+        user-select: none;
+        color: deepskyblue;
         background-color: #111;
         align-items: center;
         align-self: center;
         justify-content: center;
         padding: 1.2rem;
-        border: 1px solid black;
-        box-shadow: 0 0.3rem 1rem black;
     }
 
     &__text {
