(fix) add base element to index.html to fix relative routing MIME error. (style) add title style to NewHabit header

--- a/client/src/components/NewHabit/NewHabit.module.scss
+++ b/client/src/components/NewHabit/NewHabit.module.scss
@@ -1,6 +1,10 @@
 @use "../../style/shared/shared";
 @use "../../style/shared/color";
 
+.Title {
+    @extend %page-title;
+}
+
 .Form {
     display: flex;
     flex-direction: column;
