--- a/client/src/components/HabitEntry/HabitEntry.scss
+++ b/client/src/components/HabitEntry/HabitEntry.scss
@@ -14,7 +14,7 @@
     }
 
     display: flex;
-    background-color: color.$dark-tint;
+    background-color: var(--dark-tint);
     border-radius: 5px;
     justify-content: space-evenly;
     padding: 0.2rem 0;
