--- a/client/src/components/HabitInstance/ToggleInstance/HabitToggleInstance.module.scss
+++ b/client/src/components/HabitInstance/ToggleInstance/HabitToggleInstance.module.scss
@@ -16,7 +16,7 @@ $width: 1.5rem;
     margin: 0.2rem 0.5rem;
     user-select: none;
 
-    border: 1px solid #333;
+    border: 1px solid var(--secondary);
     border-radius: 50%;
 
     transition: all 100ms ease-out;
