--- a/client/src/components/Habits/HabitFilter/HabitFilter.module.scss
+++ b/client/src/components/Habits/HabitFilter/HabitFilter.module.scss
@@ -21,8 +21,8 @@ $label-pad: 0.5rem 1rem;
         @extend %default-button;
         @extend %row-between;
         width: 100%;
-        outline: 2px solid color.$secondary;
-        background-color: color.$dark-tint;
+        outline: 2px solid var(--secondary);
+        background-color: var(--dark-tint);
         color: black;
         padding: $label-pad;
         height: 120%;
@@ -33,7 +33,7 @@ $label-pad: 0.5rem 1rem;
         transition: all 135ms ease-out;
 
         &:hover {
-            background-color: color.$secondary;
+            background-color: var(--secondary);
         }
     }
 }
@@ -44,8 +44,8 @@ $label-pad: 0.5rem 1rem;
     width: 100%;
     left: 0;
     border-radius: 0 0 5px 5px;
-    outline: 2px solid color.$secondary;
-    background-color: color.$secondary;
+    outline: 2px solid var(--secondary);
+    background-color: var(--secondary);
     padding: 0.2em;
 }
 
@@ -64,7 +64,7 @@ $label-pad: 0.5rem 1rem;
     padding: 0.5em 1.2em;
     height: 3rem;
     line-height: 100%;
-    background-color: #1d1d1d;
+    background-color: var(--least-dark);
     box-shadow: 0 0 0.3rem 0 black;
     outline: 2px solid transparent;
 
@@ -76,8 +76,8 @@ $label-pad: 0.5rem 1rem;
     }
 
     &:hover {
-        outline: 2px solid color.$tertiary;
-        background-color: color.$secondary;
+        outline: 2px solid var(--tertiary);
+        background-color: var(--secondary);
         transform: scale(0.97);
     }
 
@@ -97,7 +97,7 @@ $label-pad: 0.5rem 1rem;
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    // outline: 1px solid color.$secondary;
+    // outline: 1px solid var(--secondary);
     width: $size;
     height: $size;
 }
