--- a/client/src/components/Layout/header.module.scss
+++ b/client/src/components/Layout/header.module.scss
@@ -38,7 +38,7 @@
     z-index: 1000;
     top: 0;
     width: 100%;
-    background-color: color.$dark;
+    background-color: var(--dark);
     box-shadow: 0 0.3rem 1rem 0 black;
 
     &__logo {
