--- a/client/src/components/NewHabit/NewHabit.module.scss
+++ b/client/src/components/NewHabit/NewHabit.module.scss
@@ -63,12 +63,12 @@
     padding: 0.4rem 0.8rem;
     padding-top: 1.5rem;
     gap: 0.2rem;
-    box-shadow: 0rem 0.2rem 0.5rem 0 color.$dark;
+    box-shadow: 0rem 0.2rem 0.5rem 0 var(--dark);
     border-radius: 5px;
     display: flex;
     flex-direction: column;
     width: 18rem;
-    background-color: color.$main;
+    background-color: var(--main);
     justify-content: center;
 }
 
@@ -84,9 +84,9 @@
     position: absolute;
     top: -15px;
     left: -12px;
-    box-shadow: 0.6rem 0.6rem 0 -0.4rem color.$dark-tint;
-    background-color: color.$dark;
-    color: azure;
+    box-shadow: 0.6rem 0.6rem 0 -0.4rem var(--dark-tint);
+    background-color: var(--dark);
+    color: var(--light);
     padding: 0.3rem 1.5rem;
     min-width: max-content;
     width: 90%;
@@ -113,7 +113,7 @@
     // align-items: center;
     justify-content: center;
     text-indent: 0.5rem;
-    color: #bbb;
+    color: var(--text-dark);
 }
 
 .Input {
@@ -143,7 +143,7 @@
 .Select {
     @extend %shared-input;
     @extend %outline-active;
-    background-color: color.$main;
+    background-color: var(--main);
     color: #ddd;
 
     transition: all 50ms cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -152,7 +152,7 @@
 }
 
 .Option {
-    background-color: color.$secondary;
+    background-color: var(--secondary);
 }
 
 .Button {
@@ -164,13 +164,13 @@
     align-self: center;
     justify-self: center;
     margin-right: 1.3rem;
-    background-color: color.$secondary;
+    background-color: var(--secondary);
     border-radius: 10px;
     line-height: 100%;
     border: 2px solid #555;
     padding: 1rem 0.9rem;
     font-size: 0.85rem;
-    color: color.$light;
+    color: var(--light);
 
     transition: all 50ms ease-out;
 
