--- a/client/src/style/shared/_shared.scss
+++ b/client/src/style/shared/_shared.scss
@@ -16,7 +16,7 @@ $habitEntryMarginSmall: 0.3rem;
     outline: none;
     padding: none;
     margin: none;
-    color: color.$light;
+    color: var(--light);
     background: none;
 }
 
@@ -24,11 +24,11 @@ $habitEntryMarginSmall: 0.3rem;
     outline: none;
     border: none;
 
-    background-color: color.$main;
+    background-color: var(--main);
     padding: 0.4rem;
-    color: color.$light;
+    color: var(--light);
     border-radius: 5px;
-    border: 2px solid color.$tertiary;
+    border: 2px solid var(--tertiary);
 }
 
 %outline-active {
@@ -36,12 +36,12 @@ $habitEntryMarginSmall: 0.3rem;
     &:active,
     &:focus {
         transition: border-color 60ms ease-out;
-        border-color: color.$light;
+        border-color: var(--light);
     }
 }
 
 %box {
-    border: 3px solid color.$secondary;
+    border: 3px solid var(--secondary);
     box-shadow: 0 0 0.8rem 0 #111;
 }
 
@@ -53,7 +53,7 @@ $habitEntryMarginSmall: 0.3rem;
 }
 
 %page-title {
-    $color: color.$light-subdued;
+    $color: var(--light-subdued);
     display: flex;
     margin-bottom: 1rem;
     width: max-content;
