--- a/client/src/components/Layout/header.module.scss
+++ b/client/src/components/Layout/header.module.scss
@@ -16,7 +16,8 @@
 
         padding: 0.5rem 1rem;
         border: 2px solid deepskyblue;
-        background-color: #222;
+        background-color: #333;
+        color: var(--text);
         border-radius: 3px;
 
         transition: all 100ms ease-in-out;
@@ -39,7 +40,7 @@
     top: 0;
     width: 100%;
     background-color: var(--dark);
-    box-shadow: 0 0.3rem 1rem 0 black;
+    box-shadow: 0 0.3rem 1rem 0 var(--dark-tint);
 
     &__logo {
         height: 100%;
@@ -48,8 +49,8 @@
         gap: 0.8rem;
         font-weight: 600;
         user-select: none;
-        color: deepskyblue;
-        background-color: #111;
+        color: var(--light);
+        background-color: var(--dark);
         align-items: center;
         align-self: center;
         justify-content: center;
