--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -22,6 +22,7 @@ body {
     --light: azure;
     --light-subdued: #d0d0d0;
     --bluish: #191a20;
+    ---text: azure;
     --text-dark: #bbb;
 
     background-color: var(--background);
@@ -43,6 +44,7 @@ body {
         --tertiary: rgb(197, 218, 241);
         --light: #111;
         --light-subdued: #191919;
+        --text: #111;
         --text-dark: #222;
     }
 }
