--- a/client/src/components/NewHabit/NewHabit.module.scss
+++ b/client/src/components/NewHabit/NewHabit.module.scss
@@ -86,7 +86,7 @@
     left: -12px;
     box-shadow: 0.6rem 0.6rem 0 -0.4rem var(--dark-tint);
     background-color: var(--dark);
-    color: var(--light);
+    color: azure;
     padding: 0.3rem 1.5rem;
     min-width: max-content;
     width: 90%;
