--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -42,10 +42,10 @@ body {
         --main: rgb(133, 179, 232);
         --secondary: rgb(154, 213, 243);
         --tertiary: rgb(197, 218, 241);
-        --light: #111;
-        --light-subdued: #191919;
-        --text: #111;
-        --text-dark: #222;
+        --light: rgb(0, 6, 118);
+        --light-subdued: #12004c;
+        --text: rgb(0, 0, 183);
+        --text-dark: rgb(19, 19, 137);
     }
 }
 
