--- a/client/src/components/HabitDetails/HabitDetails.module.scss
+++ b/client/src/components/HabitDetails/HabitDetails.module.scss
@@ -5,8 +5,8 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     z-index: 3000;
     background-color: rgba(#111, 0.65);
 }
